--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -1,9 +1,17 @@
-.icons{
-    margin: 0 10px 0 30px ;
+.icons {
+  margin: 0 10px 0 30px;
 }
 
-.icon:hover{
-    cursor: pointer;
-    -webkit-transform: scale(0.9) translateZ(0);
-    transform: scale(0.9) translateZ(0);
+.icon {
+  transition: 0.7s ease;
+}
+
+.icon:hover {
+  cursor: pointer;
+  -webkit-transform: scale(0.9) translateZ(0);
+  transform: scale(0.9) translateZ(0);
+}
+
+.active {
+  background-color: black;
 }
