--- a/src/components/TreeCard.css
+++ b/src/components/TreeCard.css
@@ -12,10 +12,11 @@
 
 .card {
   padding-bottom: 20px;
-  /* text-align: center; */
-  border: 1px solid grey;
+  align-items: center;
+  border: 1px solid rgb(136, 136, 136);
+  /* background-color: rgb(130, 132, 134); */
   border-radius: 10%;
-  box-shadow: 2px 4px 14px -2px rgba(0, 0, 0, 0.62);
+  box-shadow: 2px 4px 14px -2px rgba(0, 0, 0, 0.15);
   width: 200px;
   height: 300px;
   transition: 0.3s ease;
@@ -27,21 +28,13 @@
   transform: perspective(1px) scale(0.95) translateZ(0);
 }
 
-.card button {
+.card-button {
   height: 40px;
   width: 100px;
   text-align: center;
   border: none;
-  padding: 10px;
-  background: rgb(131, 58, 180);
-  background: linear-gradient(
-    90deg,
-    rgba(131, 58, 180, 1) 0%,
-    rgba(29, 97, 253, 1) 0%,
-    rgba(225, 69, 252, 1) 100%
-  );
+  background-color: #c7e2cf;
   cursor: pointer;
-  border-radius: 50px;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -webkit-transition-property: transform;
@@ -51,9 +44,13 @@
   outline: none;
 }
 
-button:hover {
+.card-button:hover {
   -webkit-transform: scale(0.9) translateZ(0);
   transform: scale(0.9) translateZ(0);
+}
+
+.card-button:focus {
+  outline: 0;
 }
 
 #pic {
