slider, navbar functionality, cart state display

--- a/src/components/ProductSection/Search.css
+++ b/src/components/ProductSection/Search.css
@@ -50,3 +50,12 @@ input {
 #search {
   margin-top: 50px;
 }
+
+@media only screen and (max-width: 810px) {
+  .filters {
+    display: block;
+  }
+  .filters button {
+    width: 100px;
+  }
+}
