--- a/src/components/CartExtraPage/Cart.css
+++ b/src/components/CartExtraPage/Cart.css
@@ -3,7 +3,7 @@
   margin-top: 5%;
   width: 80%;
   padding: 50px;
-  height: 50vh;
+  height: 70vh;
   background-color: #c7e2cf;
 }
 
@@ -11,12 +11,11 @@
   border-bottom: 1px solid lightslategray;
 }
 
-
 .checkout-button {
-display: flex;
-outline: none;
-padding: 10px;
-border: none;
+  display: flex;
+  outline: none;
+  padding: 10px;
+  border: none;
 }
 
 .item-button-add {
@@ -34,7 +33,7 @@ border: none;
   height: auto;
   background-color: #bf2e11;
   display: inline;
-    padding-left: 8px;
+  padding-left: 8px;
   padding-right: 8px;
   margin: 2px;
   outline: none;
@@ -47,4 +46,31 @@ border: none;
 }
 .item-button-add:focus {
   outline: none;
+}
+
+#cart-length {
+  background-color: red;
+  border-radius: 50%;
+  color: white;
+  font-weight: bold;
+  padding-left: 5px;
+  padding-right: 5px;
+  z-index: -99;
+  margin-left: -5px;
+  opacity: 70%;
+}
+
+.items-cart-container {
+  display: flex;
+}
+
+.cart-close {
+  float: right;
+  color: whitesmoke;
+  text-decoration: none;
+  transition: 0.3s ease;
+}
+
+.cart-close:hover {
+  transform: scale(0.8);
 }
