--- a/src/App.scss
+++ b/src/App.scss
@@ -35,7 +35,9 @@ h2{
 
 h3 {
     font-size: 18px;
-    margin-bottom: 16px;
+    margin-top: 36px;
+    margin-bottom: 24px;
+    line-height: 36px;
 }
 
 h4{
