--- a/src/components/HomeSection/Slideshow.css
+++ b/src/components/HomeSection/Slideshow.css
@@ -4,7 +4,7 @@
   width: 70vw;
 }
 
-.slider-button {
+/* .slider-button {
   padding: 10px;
   width: 100px;
   outline: none;
@@ -21,4 +21,4 @@
 
 .slider-button:hover {
   background-color: #9bb8a4;
-}
+} */ 
