some final changes in contact modal - to make it airy

--- a/src/components/ContactFormSection/ContactModal.css
+++ b/src/components/ContactFormSection/ContactModal.css
@@ -5,3 +5,10 @@
 .ContactModal Button{
     margin: 0 auto;
 }
+
+.ContactModal svg{
+    width: 70%;
+    margin-top: 10%;
+    margin-left: 15%;
+    margin-right: auto;
+}
