--- a/src/components/CartExtraPage/Cart.css
+++ b/src/components/CartExtraPage/Cart.css
@@ -1,10 +1,7 @@
 .cart-container {
   margin: 0 auto;
   margin-top: 5%;
-  width: 80%;
   padding: 50px;
-  height: 70vh;
-  background-color: #c7e2cf;
 }
 
 .cart-banner {
@@ -12,10 +9,7 @@
 }
 
 .checkout-button {
-  display: flex;
-  outline: none;
-  padding: 10px;
-  border: none;
+  margin: 4px;
 }
 
 .item-button-add {
@@ -61,16 +55,44 @@
 }
 
 .items-cart-container {
-  display: flex;
+  margin-top: 30px;
 }
+
+.item {
+  animation: slide 0.5s ease;
+}
+
+    @keyframes slide {
+0% {transform: translateX(200px);}
+100% {transform: translateX(0);}
+}
+
 
 .cart-close {
   float: right;
-  color: whitesmoke;
+  color: black;
   text-decoration: none;
   transition: 0.3s ease;
 }
 
 .cart-close:hover {
   transform: scale(0.8);
+}
+
+.total {
+  margin-top: 20px;
+}
+
+.total h4 {
+  margin-bottom: 0;
+}
+
+.sum {
+  text-align: center;
+  font-size: 1.5em;
+  padding: 20px;
+}
+
+.checkout-buttons-container {
+  text-align: center;
 }
