--- a/src/components/CartExtraPage/Cart.css
+++ b/src/components/CartExtraPage/Cart.css
@@ -2,6 +2,8 @@
   margin: 0 auto;
   margin-top: 5%;
   padding: 50px;
+  padding-top: 10px;
+  padding-bottom: 100px;
 }
 
 .cart-banner {
@@ -46,10 +48,8 @@
   background-color: red;
   border-radius: 50%;
   color: white;
-  font-weight: bold;
   padding-left: 5px;
   padding-right: 5px;
-  z-index: -99;
   margin-left: -5px;
   opacity: 70%;
 }
@@ -62,11 +62,14 @@
   animation: slide 0.5s ease;
 }
 
-    @keyframes slide {
-0% {transform: translateX(200px);}
-100% {transform: translateX(0);}
+@keyframes slide {
+  0% {
+    transform: translateX(200px);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
-
 
 .cart-close {
   float: right;
