--- a/src/components/ProductSection/TreeCard.css
+++ b/src/components/ProductSection/TreeCard.css
@@ -3,7 +3,7 @@
   margin: 20px;
   box-shadow: 2px 4px 14px -2px rgba(0, 0, 0, 0.15);
   text-align: center;
-  
+
 }
 
 .ButtonAdd{
@@ -13,6 +13,7 @@
 
 #pic{
   padding: 10px 30px 0 30px;
+  height: 400px;
 }
 
 #pic:hover{
