--- a/src/components/ProductSection/TreeCard.css
+++ b/src/components/ProductSection/TreeCard.css
@@ -3,7 +3,13 @@
   margin: 20px;
   box-shadow: 2px 4px 14px -2px rgba(0, 0, 0, 0.15);
   text-align: center;
+  transition: 0.3s ease;
 
+}
+
+.TreeCard:hover {
+  -webkit-transform: perspective(1px) scale(0.98) translateZ(0);
+  transform: perspective(1px) scale(0.98) translateZ(0);
 }
 
 .ButtonAdd{
@@ -17,7 +23,7 @@
 }
 
 #pic:hover{
-  cursor: pointer;
+  /* cursor: pointer; */
   
 }
 
