--- a/src/components/CartExtraPage/Cart.css
+++ b/src/components/CartExtraPage/Cart.css
@@ -14,7 +14,7 @@
 
 .item-button-add {
   background-color: #2ba031;
-  display: inline;
+  display: inside;
   padding-left: 8px;
   padding-right: 8px;
   margin: 2px;
