--- a/src/components/NavigationBar/Navigation.css
+++ b/src/components/NavigationBar/Navigation.css
@@ -13,7 +13,7 @@
 }
 
 .cart-menu {
-  overflow: scroll;
+  overflow: auto;
   margin-top: 95px;
   background: rgb(227, 245, 232);
   background: linear-gradient(
