--- a/src/components/CartExtraPage/Cart.css
+++ b/src/components/CartExtraPage/Cart.css
@@ -16,7 +16,7 @@
 
 .item-button-add {
   background-color: #2ba031;
-  display: inside;
+  display: inline;
   padding-left: 8px;
   padding-right: 8px;
   margin: 2px;
