--- a/src/components/NavigationBar/Navigation.css
+++ b/src/components/NavigationBar/Navigation.css
@@ -15,23 +15,18 @@
 .cart-menu {
   overflow: auto;
   margin-top: 95px;
-  background: rgb(227, 245, 232);
-  background: linear-gradient(
-    180deg,
-    rgba(227, 245, 232, 0.35) 0%,
-    rgba(129, 198, 149, 0.7) 100%
-  );
+  background: linear-gradient(180deg, rgba(244,247,245,0.4) 0%, rgba(244,247,245,0.6) 50%, rgba(217,232,207,1) 100%);
   width: 350px;
   height: 100vh;
   position: fixed;
-  right: -20%;
+  right: -75%;
   top: 0;
-  transition: 1000ms ease;
+  transition: 1200ms ease;
 }
 
 .cart-menu.active {
   right: 0;
-  transition: 700ms ease;
+  transition: 800ms ease;
 }
 
 .Logo {
