--- a/src/components/ProductSection/TreeCard.css
+++ b/src/components/ProductSection/TreeCard.css
@@ -17,11 +17,19 @@
   margin-bottom: 10px;
 }
 
-#pic{
+.TreeCard #pic{
   padding: 10px 30px 0 30px;
   height: 400px;
+  /* background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center; */
+
 }
 
+.opacity{
+  /* background-color: rgba(0, 255, 255, 0.4); */
+  opacity: 0.2;
+}
 
 .shadow{
   background-color: rgb(226, 225, 225);
