--- a/src/components/ProductSection/TreeCard.css
+++ b/src/components/ProductSection/TreeCard.css
@@ -27,8 +27,11 @@
 }
 
 .opacity{
-  /* background-color: rgba(0, 255, 255, 0.4); */
-  opacity: 0.2;
+  opacity: 0.4;
+  position: absolute;
+  z-index: -1;
+  height: 300px;
+  margin-top: 30px;
 }
 
 .shadow{
