--- a/src/components/HomeSection/Home.css
+++ b/src/components/HomeSection/Home.css
@@ -3,23 +3,21 @@
   color: #fff;
   letter-spacing: 1.5px;
 } */
-.jumbotron {
-  /* background-image: url("images/Falling-Confetti.gif"); */
-}
-.slogan {
+
   
-  position:relative;
+.slogan {
+   position:relative;
   margin-top: 20px;
   margin-bottom: 20px;
   margin-left: 50px;
-  
+  text-align:left;
   margin :30;
   padding:10;
  
 }
 .slogan h1 {
   font-family: font-serif;
-  text-align:center;
+  /* text-align:center; */
   line-height: 1.3;
   font-size: 80px;
   color:black;
@@ -28,8 +26,8 @@
 }
 .text2 {
   background-color:black;
+  font-family: font-serif;
 }
-
 @keyframes text {
   10% {
     color: rgb(222, 230, 238);
@@ -47,6 +45,9 @@
   background-repeat: no-repeat;
   background-size:cover;
   height: 100vh;
+  background-color: #eee;
+  display: block;
+  
 }
 Button {
   /* background: rgba(255,255,255,0.8); */
