--- a/src/components/HomeSection/Home.css
+++ b/src/components/HomeSection/Home.css
@@ -39,7 +39,7 @@
     letter-spacing: 10px;
   }
 }
-.jumbotron {
+.hero {
   color: white;
   background-position: center;
   background-repeat: no-repeat;
@@ -49,7 +49,7 @@
   display: block;
   
 }
-Button {
+.slogan Button {
   /* background: rgba(255,255,255,0.8); */
   color: #44575b;
   font-size: 24px;
