--- a/src/components/HomeSection/Home.css
+++ b/src/components/HomeSection/Home.css
@@ -1,11 +1,4 @@
-/* .confetti-wrap h1 {
-  margin:0 ;
-  color: #fff;
-  letter-spacing: 1.5px;
-} */
-
-  
-.slogan {
+/* .slogan {
    position:relative;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -17,7 +10,6 @@
 }
 .slogan h1 {
   font-family: font-serif;
-  /* text-align:center; */
   line-height: 1.3;
   font-size: 80px;
   color:black;
@@ -50,7 +42,6 @@
   
 }
 .slogan Button {
-  /* background: rgba(255,255,255,0.8); */
   color: #44575b;
   font-size: 24px;
   float: center;
@@ -59,4 +50,24 @@
   margin-top: 30px;
   padding: 20px 90px;
   text-decoration: none;
+} */ 
+
+.slogan h1 {
+  line-height: 1.2;
+  font-size: 80px;
+  color: black;
+  position: relative;
+  animation: text 3s ease;
+}
+
+@keyframes text {
+  0% {
+    color: rgb(222, 230, 238);
+  }
+  30% {
+    letter-spacing: 10px;
+  }
+  100% {
+    letter-spacing: 0px;
+  }
 }
