--- a/src/components/CartExtraPage/Cart.css
+++ b/src/components/CartExtraPage/Cart.css
@@ -1,4 +1,4 @@
-.cart-container {
+#cart-container {
   margin: 0 auto;
   margin-top: 5%;
   padding: 50px;
@@ -6,47 +6,64 @@
   padding-bottom: 100px;
 }
 
+.cd-cart-list{
+  display:flex;
+  border-bottom: none;
+ 
+}
+.cd-cart-list-items{
+  margin-bottom: 10px;
+  width: 250px;
+}
+
 .cart-banner {
   padding-bottom: 20px;
   border-bottom: 1px solid lightslategray;
-}
-
-.cart-items{
-  width:200px;
+  margin-bottom: 10px;
 }
 
 .checkout-button {
   margin: 4px;
 }
+#cd-cart-btn{
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+  align-content: center;
+}
 
-.item-button-add {
-  background-color: #2ba031;
+#cd-cart-count{
+  width:32px;
+}
+
+#cd-price{
+  width: 50%;
+  margin-left: 25px;
+}
+ 
+#item-button-add {
+  background-color: #2ba031 !important;
   display: inline;
   padding-left: 8px;
   padding-right: 8px;
-  margin: 2px;
+  margin-left: 24px;
   outline: none;
   border: none;
+  width:48px;
   border-radius: 50%;
 }
 
-.item-button-remove {
+#item-button-remove {
   height: auto;
-  background-color: #bf2e11;
+  background-color: red!important;
   display: inline;
   padding-left: 8px;
   padding-right: 8px;
-  margin: 2px;
+  margin-right: 24px;
   outline: none;
   border: none;
+  width: 48px;
   border-radius: 50%;
-}
-
-.item-button-remove:focus {
-  outline: none;
-}
-.item-button-add:focus {
-  outline: none;
 }
 
 #cart-length {
@@ -57,58 +74,4 @@
   padding-right: 5px;
   margin-left: -5px;
   opacity: 70%;
-}
-
-.item {
-  padding-top: 30px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid lightslategray;
-  animation: slide 0.5s ease;
-}
-
-@keyframes slide {
-  0% {
-    transform: translateX(200px);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
-
-.item h3 {
-  margin: 5px;
-}
-
-.cart-close {
-  cursor: pointer;
-  float: right;
-  color: black;
-  text-decoration: none;
-  transition: 0.3s ease;
-}
-
-.cart-close:hover {
-  transform: scale(0.8);
-}
-
-.total {
-  margin-top: 20px;
-}
-
-.total h4 {
-  margin-bottom: 0;
-}
-
-.sum {
-  text-align: center;
-  font-size: 1.5em;
-  padding: 20px;
-}
-
-.checkout-buttons-container {
-  text-align: center;
-}
-
-.check {
-  margin-top: 20%;
 }
