--- a/src/components/ExtraPage/Farmer.css
+++ b/src/components/ExtraPage/Farmer.css
@@ -26,12 +26,20 @@
     min-height: 80px;
 }
 
-.FarmerTreeCard #pic:hover{
+/* .FarmerTreeCard #pic:hover{
     cursor: pointer;
+} */
+
+/* .FarmerTreeCard .TreeCard:active, .FarmerTreeCard .TreeCard:focus, .FarmerTreeCard .TreeCard:visited {
+    border: solid #588157;
+} */
+
+.active {
+    border: solid #588157
 }
 
-.FarmerTreeCard .TreeCard:active, .FarmerTreeCard .TreeCard:focus, .FarmerTreeCard .TreeCard:visited {
-    border: solid #588157;
+.FarmerTreeCard {
+    cursor: pointer;
 }
 
 .FarmerFilter .form-control{
