--- a/src/components/AboutUsSection/AboutUsSection.css
+++ b/src/components/AboutUsSection/AboutUsSection.css
@@ -8,9 +8,25 @@
     margin-bottom: 24px;
 }
 
+#MissionGoal-con{
+  margin-bottom: 0px;
+}
+
 @media (min-width: 1140px) { 
   .TeamMembers card{
       width:50%;
+  }
+  .MissionGoal h1{
+    text-align: center;
+    font-weight: 600;
+    font-size: 48px;
+  }
+
+  .MissionGoal h3{
+    text-align: center;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 3rem;
   }
 }
 
