--- a/src/components/ExtraPage/Farmer.css
+++ b/src/components/ExtraPage/Farmer.css
@@ -34,9 +34,9 @@
     border: solid #588157;
 } */
 
-.active {
+/* .active {
     border: solid #588157
-}
+} */
 
 .FarmerTreeCard {
     cursor: pointer;
