--- a/src/components/ProductSection/Filter.css
+++ b/src/components/ProductSection/Filter.css
@@ -1,19 +1,19 @@
 
 .filters {
     text-align: center;
-    padding: 20px;
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    width: 95%;
+    margin: 10px auto;
+
   }
   
   .filters button {
     padding: 10px;
-    font-size: 1em;
-    height: 40px;
-    width: 150px;
-    text-align: center;
-    border: none;
-    background-color: #c7e2cf;
-    cursor: pointer;
-    outline: none;
+    width: 18%;
+    min-height: 50px !important;
     transition: 0.3s ease;
   }
   
@@ -22,17 +22,17 @@
     transform: scale(0.9) translateZ(0);
   }
   
-  .filters button:focus {
-    outline: none;
-  }
   
-  .filters #countries {
-    padding: 5px;
-    margin: 10px;
-    width: 200px;
+.SelectCountry {
+  margin: 20px auto;
+  width: 95%;
+  height: 50px !important;  
+  text-align: center;
+  text-align-last:center;
   }
+
+.hide{
+  display: none; 
+}
   
-  .filters #countries:focus {
-    outline: none;
-  }
   
