--- a/src/components/ProductSection/Searchbar.css
+++ b/src/components/ProductSection/Searchbar.css
@@ -1,13 +1,7 @@
-.search-container {
-  text-align: center;
-  padding: 30px;
-}
-
-
 .searchInput {
-  outline: none;
-  width: 400px;
-  height: 40px;
   text-align: center;
+  width: 95% !important;
+  height: 50px !important;
+  margin: 10px auto;
 }
 
