--- a/src/components/ProductSection/TreeCard.css
+++ b/src/components/ProductSection/TreeCard.css
@@ -18,8 +18,8 @@
 }
 
 .TreeCard #pic{
-  padding: 10px 30px 0 30px;
-  height: 400px;
+  padding: 30px 30px 0 30px;
+  height: 200px;
 }
 
 .opacity{
@@ -30,12 +30,13 @@
   margin-top: 30px;
 }
 
-.shadow{
-  background-color: rgb(226, 225, 225);
+.Treeshadow{
+  background-color: rgb(219, 219, 219);
   border-radius: 60% ;
-  width: 60%;
-  height: 1%;
-  align-self: center;
+  width: 40%;
+  height: 3px;
+  margin: 0 auto;
+  box-shadow: 2px -1px 5px 2px rgba(0, 0, 0, 0.2);
 }
 /* .parent {
   text-align: center;
