--- a/src/components/ProductSection/TreeCard.css
+++ b/src/components/ProductSection/TreeCard.css
@@ -1,6 +1,6 @@
 .TreeCard {
   border-radius: 25px;
-  margin: 20px;
+  /* margin: 20px; */ 
   box-shadow: 2px 4px 14px -2px rgba(0, 0, 0, 0.15);
   text-align: center;
   transition: 0.3s ease;
@@ -92,3 +92,16 @@
   outline: 0;
 
 } */
+
+@media (min-width:992px) and (max-width:1199.98px){
+  .TreeCard{
+        width:280px;
+    }
+}
+
+@media (max-width:767.98px){
+  .TreeCard{
+      margin-left: 60px;
+      width: 360px;
+    }
+}
