--- a/src/components/ProductSection/Filter.css
+++ b/src/components/ProductSection/Filter.css
@@ -5,7 +5,7 @@
     align-items: center;
     flex-wrap: nowrap;
     justify-content: space-between;
-    width: 95%;
+    width: 100%;
     margin: 10px auto;
 
   }
@@ -24,8 +24,8 @@
   
   
 .SelectCountry {
-  margin: 20px auto;
-  width: 95%;
+  margin: 20px auto 80px auto;
+  width: 100%;
   height: 50px !important;  
   text-align: center;
   text-align-last:center;
