--- a/src/components/ProductSection/TreeCard.css
+++ b/src/components/ProductSection/TreeCard.css
@@ -23,11 +23,16 @@
 }
 
 .opacity{
-  opacity: 0.4;
+  opacity: 0.3;
   position: absolute;
   z-index: -1;
-  height: 300px;
-  margin-top: 30px;
+  height: 150px;
+  /* margin-top: 200px; */
+}
+
+.CardImages{
+  display: flex;
+  justify-content: center;
 }
 
 .Treeshadow{
