--- a/src/components/ExtraPage/Farmer.css
+++ b/src/components/ExtraPage/Farmer.css
@@ -10,8 +10,6 @@
     justify-content: space-around;
 }
 
-
-
 .Farmer h1{
     margin: 230px 0;
 }
@@ -24,12 +22,28 @@
     margin: 100px 0;
 }
 
-.FarmerHowTo #picHowTo1{
+@media (min-width: 992px){
+
+.FarmerHowTo #picHowTo{
     min-height: 170px !important;
+    margin: 30px auto !important;
 }
 
 .FarmerHowTo .card-title{
     min-height: 80px;
+}
+}
+
+@media (max-width: 991.98px){
+    
+    .FarmerHowTo #picHowTo{
+        height: 150px !important;
+        margin: 15px auto !important;
+    }
+    
+    .FarmerHowTo .card-title{
+        min-height: 80px;
+    }
 }
 
 /* .FarmerTreeCard #pic:hover{
