--- a/src/components/ExtraPage/Join.css
+++ b/src/components/ExtraPage/Join.css
@@ -8,5 +8,27 @@
 }
 
 .Join .JobDesc{
-    text-align: left !important;
+    text-align: left;
+    margin-bottom: 50px;
+}
+
+.flexb{
+    display:flex;
+    justify-content: space-evenly;
+}
+
+.flexb p{
+    width: 300px;
+}
+
+.flexb .border{
+    border:solid rgb(114, 114, 114);
+}
+
+.Join button{
+    width: 100%;
+}
+
+.Join .Email{
+    width: 20% !important;
 }
