--- a/src/components/CartExtraPage/CheckOut.css
+++ b/src/components/CartExtraPage/CheckOut.css
@@ -1,206 +1,55 @@
-#cart-container {
-  margin: 0 auto;
-  padding: 50px;
-  background-color: #e9ecef;
-  display: block;
-  height: 100%;
+.check h3 {
+ box-sizing: border-box;
+ width: 100%;
+ margin-top: 5%;
+ border:5px none;
+ border-radius: 5px;
+ box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+ background-color: white;
 }
 
-.cart-banner {
-  border-bottom: 1px solid lightslategray;
-  margin-bottom: 24px;
-}
-#cart-h-text{
-  width:100%;
-}
-.cart-banner h2{
-  font-weight: 600;
-  font-size: 48px;
-}
+.check{
+background-color: #f1f2f6;
+background-image: linear-gradient(315deg, #f1f2f6 0%, #c9c6c6 74%);
 
-.cart-banner p{
-  margin-bottom: 12px;
+width: 100%;
+margin-top: 5%;
+background-repeat: no-repeat;
+background-position: right;
+border: 5px none;
+border-radius: 5px;
+box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+padding: 20px 20px;
+box-sizing: border-box;
+margin: 150px auto 30px;
+position: relative;
 }
+.Note span {
 
-#cart-close{
-  cursor: pointer;
-  font-weight: 600;
-  font-size: 24px;
-  float: right;
-  color: black;
-
-}
-
-.cd-cart-head{
-  display: flex;
-  align-items: center;
-}
-
-.cd-cart-head img{
-  margin-right: 24px;
-}
-
-.cd-cart-head h3{
-  font-weight: 600;
-  margin-top: 24px;
-  margin-bottom: 0px;
-  line-height: 1.3;
-}
-
-.cd-cart-head p{
-  line-height: 1.3;
-  margin-bottom: 24px;
-}
-
-.Liste{
-   margin-bottom: 372px;
-}
-.cd-cart-list{
-  display:flex;
-  border-bottom: none;
+ width: 80%;
+ margin-top: 0 auto;
+ background-repeat: no-repeat;
+ background-position: center;
  
-}
-.cd-cart-list-items{
-  margin-bottom: 10px;
-  width: 250px;
-}
-.checkout-button {
-  margin: 4px;
-  cursor: not-allowed;
-}
-
-#cd-cart-btn{
-  display: flex;
-  align-items: center;
-  margin-bottom: 24px;
-  align-content: center;
-}
-
-#cd-cart-count{
-  width:32px;
-  height: 32px;
-}
-
-#cd-price{
-  width: 50%;
-  margin-left: 25px;
-}
- 
-#item-button-add {
-  background-color: #2ba031 !important;
-  display: inline;
-  align-self: center;
-  padding-left: 8px;
-  padding-right: 8px;
-  margin-left: 24px;
-  outline: none;
-  border: none;
-  width: 48px;
-  height: auto;
-  border-radius: 50%;
-}
-
-#item-button-remove {
-  background-color:#d62347!important;
-  display: inline;
-  padding-left: 8px;
-  padding-right: 8px;
-  margin-right: 24px;
-  outline: none;
-  border: none;
-  width: 48px;
-  height: auto;
-  border-radius: 50%;
-}
-
-#cart-length {
-  background-color: red;
-  border-radius: 50%;
-  color: white;
-  padding-left: 5px;
-  padding-right: 5px;
-  margin-left: -5px;
-  opacity: 70%;
-}
-
-.total{
-  border-top: 1px solid lightslategray;
-  margin-top: 32px;
-  position: fixed;
-  background-color: #e9ecef;
-  width: 250px;
-  height: 300px;
-  bottom:0;
-  padding-top: 32px;
-}
-
-
-.total h4{
-  margin: 0;
-  font-weight: 700;
-  font-size: 18px;
-}
-
-#total-sum{
-  display: flex;
-  width: 250px;
-  align-items: center;
-}
-
-#total-sum p{
-  margin-left: 12px;
-  font-size: 32px;
-  margin-bottom:0;
-  align-items: flex-end;
-}
-
-
-  @keyframes slide {
-    0% {
-      transform: translateX(200px);
-    }
-    100% {
-      transform: translateX(0);
-    }
-  }
-
-.check {
-  margin: 0 auto;
-  margin-top: 150px;
-  width: 30%;
 }
 .checkoutForm {
-  margin-top: 20px;
+background-color: #f1f2f6;
+background-image: linear-gradient(315deg, #f1f2f6 0%, #c9c6c6 74%);
 
+width: 100%;
+margin-top: 5%;
+background-repeat: no-repeat;
+background-position: right;
+border: 5px none;
+border-radius: 5px;
+box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+padding: 20px 20px;
+box-sizing: border-box;
+margin: 150px auto 30px;
+position: relative;
 }
-
-.total h4{
-  margin: 0;
-  font-weight: 700;
-  font-size: 18px;
+.div
+{
+margin-bottom:10px;
+width: 40% !important;
 }
-
-.StripeElement {
-  border-radius: 5px;
-  border: 1px solid #ced4da;
-  padding: 10px;
-}
-
-
-#total-sum{
-  display: flex;
-  width: 250px;
-  align-items: center;
-}
-
-.items-checkout h3, span{
-  margin: 0;
-}
-
-#total-sum p{
-  margin-left: 12px;
-  font-size: 32px;
-  margin-bottom:0;
-  align-items: flex-end;
-}
-
