--- a/src/components/NavigationBar/AddTrees.css
+++ b/src/components/NavigationBar/AddTrees.css
@@ -15,39 +15,19 @@ margin-top: 10%;
 
 #addTreeForm
 {
-    margin: 0 auto;
-    width: 50%;
-    margin-top: 5%;
-    background-image: url('../../trees-illustrtion/tree-illu-19.svg');
-    background-repeat: no-repeat;
-    background-position: right;
-	border: 5px none;
-	border-radius: 5px;
-	box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
-	padding: 50px 30px;
-	box-sizing: border-box;
-	margin: 10 10%;
-
-    
-}
-
-.tree-button {
-  display: inline-block;
-  text-align: center;
-  width:40%;
-  margin-top:10px;
-  border: 5px none;
- border:0.16em solid #FFFFFF;
- margin:0 0.3em 0.3em 0;
+margin: 0 auto;
+width: 80%;
+margin-top: 5%;
+background-image: url('../../trees-illustrtion/tree-illu-49.svg');
+background-repeat: no-repeat;
+background-position: right;
+border: 5px none;
+border-radius: 5px;
+box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+padding: 50px 30px;
+box-sizing: border-box;
+background-color:#C8C8C8;
 
 }
-
-.BgImg {
- padding: 0 6px;
-  float: left;
-  width: 24.99999%;
-}
-
-  
 
     
