new circles minor stuff

--- a/src/components/CartExtraPage/GiftTree.css
+++ b/src/components/CartExtraPage/GiftTree.css
@@ -1,12 +1,15 @@
 #gift-tree-container {
-    margin-top: 10%;
+  margin-top: 10%;
 }
 
 #gift-tree-error {
-    margin-top: 10%;
+  margin-top: 10%;
 }
 
 .giftCenteredContent.row {
-    justify-content: center;
-    height: 800px;
+  justify-content: center;
+}
+
+#giftTree-h3 {
+  text-align: center;
 }
