--- a/src/components/CartExtraPage/Cart.css
+++ b/src/components/CartExtraPage/Cart.css
@@ -112,14 +112,28 @@
   border-radius: 50%;
 }
 
-#cart-length {
+/* #cart-length {
   background-color: red;
   border-radius: 50%;
   color: white;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 7px;
+  padding-right: 7px;
   margin-left: -5px;
   opacity: 70%;
+} */
+
+#cart-length {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  color: white;
+  border-radius: 50%;
+  line-height: 18px;
+  font-size: 12px;
+  margin-left: -5px;
+  text-align: center;
+  cursor: pointer;
+  background-color: #d62347;
 }
 
 .total {
