idonno whats happenning

--- a/src/components/NavigationBar/AddTrees.css
+++ b/src/components/NavigationBar/AddTrees.css
@@ -1,41 +1,47 @@
-.stop-container {
-    margin: 100px;
-    margin-top: 8%;
+.check h3 {
+ box-sizing: border-box;
+ /* box-sizing: border-box; */
+ width: 50%;
+ margin-top: 5%;
+ border:5px none;
+ border-radius: 5px;
+ box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+ /* border:5px none;
+ border-radius: 5px; */
+ /* box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4); */
+ background-color: white;
 }
 
-.stop-container h2 {
-    padding-bottom: 40px;
+@@ -24,7 +24,6 @@ margin: 150px auto 30px;
+position: relative;
 }
+.Note span {
 
-#AddTreeHeader {
-text-align:center;
-margin-top: 10%;
+ width: 80%;
+ margin-top: 0 auto;
+ background-repeat: no-repeat;
+@@ -35,19 +34,15 @@ position: relative;
+background-color: #c3cbdc;
+background-image: linear-gradient(147deg, #c3cbdc 0%, #edf1f4 74%);
+width: 100%;
 
-}
-
-#addTreeForm
-{
-margin: 0 auto;
-width: 80%;
-margin-top: 5%;
-background-image: url('../../trees-illustrtion/tree-illu-49.svg');
+margin-top: 0 auto;
 background-repeat: no-repeat;
 background-position: right;
 border: 5px none;
+/* border: 5px none;
 border-radius: 5px;
 box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
-padding: 50px 30px;
+padding: 20px 20px;
 box-sizing: border-box;
-background-color: #c3cbdc;
-
+box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4); */
+padding: 0px 20px;
+/* box-sizing: border-box; */
+margin: 50px auto 30px;
+position: relative;
 }
-
-Button {
-  margin: auto;
-  width: 20%;
-  padding: 10px;
-  margin-top:5px;
-  position: relative;
+.div
+{
+margin-bottom:10px;
+width: 40% !important;
 }
-
-    
