--- a/src/components/NavigationBar/AddTrees.css
+++ b/src/components/NavigationBar/AddTrees.css
@@ -26,7 +26,7 @@ border-radius: 5px;
 box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
 padding: 50px 30px;
 box-sizing: border-box;
-background-color: #c3cbdc;
+background-color: #e9ecef;
 
 }
 
