--- a/src/components/CartExtraPage/Checkout.css
+++ b/src/components/CartExtraPage/Checkout.css
@@ -1,81 +1,22 @@
+#checkout-header {
+    margin-top: 10%;
+}
+
+
 .check h3 {
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> 9aa1c9671cb5a45f2c4290c863b7a834d21c221a
- box-sizing: border-box;
- width: 100%;
- margin-top: 5%;
- border:5px none;
- border-radius: 5px;
- box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
- background-color: white;
-}
-
-.check{
-background-color: #f1f2f6;
-background-image: linear-gradient(315deg, #f1f2f6 0%, #c9c6c6 74%);
-
-width: 100%;
-margin-top: 5%;
-background-repeat: no-repeat;
-background-position: right;
-border: 5px none;
-border-radius: 5px;
-box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
-padding: 20px 20px;
-box-sizing: border-box;
-margin: 150px auto 30px;
-position: relative;
-}
-.Note span {
-
- width: 80%;
- margin-top: 0 auto;
- background-repeat: no-repeat;
- background-position: center;
- 
-}
-.checkoutForm {
-background-color: #f1f2f6;
-background-image: linear-gradient(315deg, #f1f2f6 0%, #c9c6c6 74%);
-
-width: 100%;
-margin-top: 5%;
-background-repeat: no-repeat;
-background-position: right;
-border: 5px none;
-border-radius: 5px;
-box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
-padding: 20px 20px;
-box-sizing: border-box;
-margin: 150px auto 30px;
-position: relative;
-}
-.div
-{
-margin-bottom:10px;
-width: 40% !important;
-}
-<<<<<<< HEAD
-=======
-    /* box-sizing: border-box; */
     width: 50%;
     margin-top: 5%;
-    /* border:5px none;
-    border-radius: 5px; */
-    /* box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4); */
-    background-color: white;
+    background-color:  #c3cbdc;
+    text-decoration: underline;
+    
    }
-=======
-
->>>>>>> 9aa1c9671cb5a45f2c4290c863b7a834d21c221a
    
    .check{
    background-color: #c3cbdc;
    background-image: linear-gradient(147deg, #c3cbdc 0%, #edf1f4 74%);
    width: 50%;
-   margin-top: 50%;
+    margin: 0 auto;
+    margin-top: 30px;
    background-repeat: no-repeat;
    background-position: right;
    border: 5px none;
@@ -83,29 +24,20 @@ width: 40% !important;
    box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
    padding: 20px 20px;
    box-sizing: border-box;
-   margin: 150px auto 30px;
    position: relative;
    }
-   .Note span {
-    width: 80%;
-    margin-top: 0 auto;
-    background-repeat: no-repeat;
-    background-position: center;
-    
-   }
-   .checkoutForm {
+     .checkoutForm {
    background-color: #c3cbdc;
    background-image: linear-gradient(147deg, #c3cbdc 0%, #edf1f4 74%);
    width: 100%;
-   margin-top: 0 auto;
+   /* margin-top: 0 auto; */
    background-repeat: no-repeat;
    background-position: right;
-   /* border: 5px none;
-   border-radius: 5px;
-   box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4); */
    padding: 0px 20px;
-   /* box-sizing: border-box; */
    margin: 50px auto 30px;
    position: relative;
    }
->>>>>>> b57ba308e1b105d7888efe68e1a4dba7af6267de
+   #cardElement {
+       background-color: white;
+   }
+   
