--- a/src/components/HomeSection/Home.css
+++ b/src/components/HomeSection/Home.css
@@ -77,7 +77,7 @@
 }
 
 .hero{
-  height: 100vh;
+  height: 900px;
   margin-bottom: 160px;
 }
 
@@ -127,7 +127,7 @@
 
 @media (max-width: 768.98px){
   .hero{
-    height:60vh;
+    height:600px;
   }
   .slogan h1 {
   line-height: 1.2;
