--- a/src/App.scss
+++ b/src/App.scss
@@ -90,3 +90,24 @@ p {
 .svgsize{
     width: 50%;
 }
+
+.come-in {
+    transform: translateY(160px);
+    animation: come-in 1.5s cubic-bezier(0.23, 1, 0.32, 1) forwards;
+    opacity: 0.0001;
+  }
+  .come-in:nth-child(odd) {
+    animation-duration: 1.5s;
+  }
+  .already-visible {
+    transform: translateY(0);
+    animation: none;
+    opacity: 1;
+  }
+
+@keyframes come-in {
+  to {
+    transform: translateY(0);
+    opacity: 1;
+   }
+}
