--- a/src/components/CartExtraPage/Pdf.css
+++ b/src/components/CartExtraPage/Pdf.css
@@ -8,6 +8,11 @@
   background-position: center;
 }
 
+.download{
+  margin: 5% 20%;
+  width:60%
+}
+
 #certificate-header-container {
   display: flex;
   justify-content: center;
@@ -15,7 +20,7 @@
 
 #certificate-header {
   display: inline-block;
-  margin-top: 200px;
+  margin-top: 25%;
 }
 
 #certificate-desc {
